syntax = "proto3";

package filestream;

message FileRequest {
  string file_name = 1;
}

message FileChunk {
  bytes chunk = 1;
}

service FileStreamingService {
  rpc StreamFile (FileRequest) returns (stream FileChunk);
  rpc UploadFile (stream FileChunk) returns (FileRequest);
}